--- a/muilt-page-vue/package.json
+++ b/muilt-page-vue/package.json
@@ -9,7 +9,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.1.0"
+    "vue": "^2.1.0",
+    "vue-resource": "^1.1.1",
+    "vue-router": "^2.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
