--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,15 @@
 .DS_Store
-.idea
 node_modules/
 dist/
 map/
-npm-debug.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
