--- a/package.json
+++ b/package.json
@@ -1,61 +1,67 @@
 {
   "name": "muilt-page-vue",
   "version": "1.0.0",
-  "description": "A Vue.js project",
+  "description": "vue多页面架构第三版",
   "author": "姚泽源 <yaozeyuan93@gmail.com>",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
-    "start": "node build/dev-server.js",
-    "build": "node build/build.js"
+    "start": "npm run dev",
+    "build": "node build/build.js",
+    "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
-    "happypack": "^4.0.0-beta.1",
-    "vue": "^2.3.3",
-    "vue-resource": "^1.1.1",
-    "vue-router": "^2.3.1",
-    "vuex": "^2.0.0",
-    "webpack-uglify-parallel": "^0.1.3"
+    "vue": "^2.5.2",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "cross-env": "^1.0.6",
     "style-loader": "^0.13.1",
-    "autoprefixer": "^6.7.2",
+    "function-bind": "^1.0.2",
+    "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^7.1.1",
     "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-es2015": "^6.13.2",
     "babel-preset-env": "^1.3.2",
-    "babel-register": "^6.22.0",
     "babel-preset-stage-2": "^6.22.0",
-    "chalk": "^1.1.3",
+    "babel-register": "^6.22.0",
+    "chalk": "^2.0.1",
     "connect-history-api-fallback": "^1.3.0",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
+    "eslint": "^3.19.0",
+    "eslint-friendly-formatter": "^3.0.0",
+    "eslint-loader": "^1.7.1",
+    "eslint-plugin-html": "^3.0.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.2.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.1",
-    "extract-text-webpack-plugin": "^2.0.0",
-    "file-loader": "^0.11.1",
-    "friendly-errors-webpack-plugin": "^1.1.3",
-    "function-bind": "^1.0.2",
-    "html-webpack-plugin": "^2.28.0",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^1.1.4",
+    "friendly-errors-webpack-plugin": "^1.6.1",
+    "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.3",
-    "json-loader": "^0.5.4",
-    "opn": "^4.0.2",
-    "ora": "^1.2.0",
+    "webpack-bundle-analyzer": "^2.9.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
-    "optimize-css-assets-webpack-plugin": "^1.3.0",
+    "opn": "^5.1.0",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "ora": "^1.2.0",
     "rimraf": "^2.6.0",
     "url-loader": "^0.5.8",
-    "vue-loader": "^12.1.0",
+    "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
-    "webpack": "^2.6.1",
-    "webpack-dev-middleware": "^1.10.0",
-    "webpack-hot-middleware": "^2.18.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "webpack-bundle-analyzer": "^2.2.1",
-    "webpack-merge": "^4.1.0",
-    "vue-template-compiler": "^2.3.3"
+    "vue-template-compiler": "^2.5.2",
+    "portfinder": "^1.0.13",
+    "webpack": "^3.6.0",
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-hot-middleware": "^2.18.2",
+    "webpack-merge": "^4.1.0"
   },
   "engines": {
     "node": ">= 4.0.0",
